--- a/package.json
+++ b/package.json
@@ -9,15 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.3",
     "axios": "^1.6.7",
     "flowbite": "^2.2.1",
     "js-confetti": "^0.12.0",
     "jsonwebtoken": "^9.0.2",
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
-    "vue-router": "^4.2.5",
-    "vuejs-jwt": "^1.1.0"
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
